Remove unecessary scrollbar and fix navbar styling

--- a/src/components/navbar/index.css
+++ b/src/components/navbar/index.css
@@ -1,11 +1,12 @@
 .upper_menu{
-    padding: 0.3% 0.5% 0.3% 0 !important;
     background-color:  #F6F6F6 !important;
     margin-top: 0px !important;
     margin-bottom: 0px !important;
     box-shadow: 3px 3px 16px rgba(0, 0, 0, 0.11) !important;
     z-index: 5;
     position: relative !important;
+    min-height: unset !important;
+    padding: 0.4em 0;
 }
 .lower_menu{
     background-color: #F6F6F6 !important;
