--- a/src/css/app.css
+++ b/src/css/app.css
@@ -16,8 +16,6 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  overflow-y: scroll !important;
-  overflow-x: hidden !important;
 }
 
 .app-container {
